# camera

./: pyproject.toml
camera/: __main__.py  camera_widget.py  main_window.py  make_photo_widget.py  photo_widget.py  smart_video_player_widget.py  smart_youtube_player_widget.py  tabs.py  utilities.py  video_player_widget.py
camera/other_widgets/: screen.py
camera/threads/: camera_which_detects_people.py  make_photo.py  smart_video_player.py  smart_youtube_player.py
