[build-system]
requires = ["setuptools >= 61.0", "wheel >= 0.38"]
build-backend = "setuptools.build_meta"

[project]
name = "camera"
version = "1"
dependencies = [
  "certifi==2024.2.2",
  "charset-normalizer==3.3.2",
  "colorama==0.4.6",
  "contourpy==1.2.0",
  "cycler==0.12.1",
  "filelock==3.13.1",
  "fonttools==4.49.0",
  "fsspec==2024.2.0",
  "idna==3.6",
  "Jinja2==3.1.3",
  "kiwisolver==1.4.5",
  "MarkupSafe==2.1.5",
  "matplotlib==3.8.3",
  "mpmath==1.3.0",
  "networkx==3.2.1",
  "numpy==1.26.4",
  "opencv-python==4.9.0.80",
  "packaging==23.2",
  "pafy==0.5.5",
  "pandas==2.2.1",
  "pillow==10.2.0",
  "psutil==5.9.8",
  "py-cpuinfo==9.0.0",
  "pyparsing==3.1.2",
  "PyQt6==6.6.1",
  "PyQt6-Qt6==6.6.2",
  "PyQt6-sip==13.6.0",
  "python-dateutil==2.9.0.post0",
  "pytz==2024.1",
  "PyYAML==6.0.1",
  "requests==2.31.0",
  "scipy==1.12.0",
  "seaborn==0.13.2",
  "six==1.16.0",
  "sympy==1.12",
  "thop==0.1.1.post2209072238",
  "torch==2.2.1",
  "torchvision==0.17.1",
  "tqdm==4.66.2",
  "typing_extensions==4.10.0",
  "tzdata==2024.1",
  "ultralytics==8.1.24",
  "urllib3==2.2.1",
  "youtube-dl==2021.12.17"
]
requires-python = ">=3.10"
authors = [
  {name = "Damian Omiotek", email = "domiotek@sii.pl"},
]
description = ""
readme = "README.md"
license = {file = "LICENSE.txt"}
keywords = ["alarm", "alarm clock", "clock", "stopwatch", "timer", "world clock"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python :: 3.10",
]

[project.urls]
Repository = "https://github.com/damianomiotek/Alarm-Clock"

[tool.setuptools.package-data]
"camera" = ["*.pt"]
